[package]
name = "k2_tree"
version = "0.2.0"
authors = ["GGabi <gabrielroels@googlemail.com>"]
edition = "2018"
description = "A space-efficient representation of sparsely populated bit-matrices."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.17.4"

[dev-dependencies]
rand = "0.7.3"