[package]
name = "k2_tree"
version = "0.5.0"
authors = ["GGabi <gabrielroels@googlemail.com>"]
readme = "README.md"
edition = "2018"
description = "A space-efficient representation of sparsely populated bit-matrices."
license = "MIT"
repository = "https://github.com/GGabi/k2_tree"
documentation = "https://docs.rs/k2_tree/"
keywords = ["collection", "tree", "matrix", "bit", "bit-matrix"]
categories = ["compression", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.17.4"
serde = { version = "1.0.119", features = ["derive"] }

[dev-dependencies]
rand = "0.7.3"
serde_json = "1.0"
serde_yaml = "0.8"